<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2020 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#000000"
            android:backgroundTint="#000000">

            <com.example.android.camera.utils.AutoFitSurfaceView
                android:id="@+id/view_finder"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1" />
        </FrameLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:overScrollMode="ifContentScrolls"
                android:padding="4pt">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="147dp"
                        android:layout_height="wrap_content"

                        android:layout_gravity="center_vertical"
                        android:text="@string/app_title"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/ftFeedback"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start|center_vertical"
                            android:layout_weight="1" />

                        <Button
                            android:id="@+id/buttonKill"
                            android:layout_width="146dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right|fill_vertical|end"
                            android:layout_weight="1"
                            android:includeFontPadding="false"
                            android:minWidth="10dp"
                            android:text="@string/stop_button" />
                    </LinearLayout>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <View
                        android:id="@+id/divider"
                        android:importantForAccessibility="no"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="0pt"
                        android:layout_marginBottom="4pt"
                        android:background="#FFAA00"
                        android:paddingTop="5pt" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="4dp"
                    android:background="#393939"
                    android:padding="4dp">

                    <Switch
                        android:id="@+id/switch1"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_gravity="left"
                        android:checked="true"
                        android:splitTrack="false"
                        android:text="@string/preview_label"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="#C1C1C1" />

                    <Switch
                        android:id="@+id/switch2"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_gravity="left"
                        android:checked="false"
                        android:text="@string/stream_label"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="#C1C1C1" />

                    <Switch
                        android:id="@+id/switchRTSP"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_gravity="left"
                        android:checked="false"
                        android:text="@string/rtsp_label"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="#C1C1C1" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="4dp"
                    android:background="#393939"
                    android:padding="4dp">

                    <TextView
                        android:id="@+id/textViewEncoding"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:labelFor="@+id/spinnerEncoding"
                        android:text="@string/encoding_label"
                        android:labelFor="@+id/spinnerEncoding"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                    <Spinner
                        android:id="@+id/spinnerEncoding"
                        android:layout_width="131dp"
                        android:layout_height="48dp"
                        android:contentDescription="@string/encoding_label" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="4dp"
                    android:background="#393939"
                    android:padding="4dp">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:labelFor="@+id/spinnerCam"
                        android:text="@string/sensor_label"
                        android:labelFor="@+id/spinnerCam"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                    <Spinner
                        android:id="@+id/spinnerCam"
                        android:layout_width="131dp"
                        android:layout_height="48dp"
                        android:contentDescription="@string/sensor_label" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="4dp"
                    android:background="#393939"
                    android:padding="4dp">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:labelFor="@+id/spinnerRes"
                        android:text="@string/resolution_label"
                        android:labelFor="@+id/spinnerRes"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                    <Spinner
                        android:id="@+id/spinnerRes"
                        android:layout_width="131dp"
                        android:layout_height="48dp"
                        android:contentDescription="@string/resolution_label" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="4dp"
                    android:background="#393939"
                    android:padding="4dp">

                    <TextView
                        android:id="@+id/textView42"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:labelFor="@+id/spinnerQua"
                        android:text="@string/quality_label"
                        android:labelFor="@+id/spinnerQua"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                    <LinearLayout
                        android:layout_width="131dp"
                        android:layout_height="48dp"
                        android:orientation="horizontal">

                        <Spinner
                            android:id="@+id/spinnerQua"
                            android:layout_width="95dp"
                            android:layout_height="48dp"
                            android:contentDescription="@string/quality_label" />

                        <TextView
                            android:id="@+id/qual_feedback"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorPrimary"
                            android:textSize="12sp" />
                    </LinearLayout>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="4dp"
                    android:background="#393939"
                    android:padding="4dp">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:labelFor="@+id/textView6"
                        android:text="@string/ip_label" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="?attr/selectableItemBackground"
                            android:clickable="true"
                            android:focusable="true"
                            android:padding="8dp"
                            android:text="@string/default_ip"
                            android:textColor="@color/colorLink"
                            android:tooltipText="@string/copy_ip_tooltip" />
                    </LinearLayout>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="4dp"
                    android:layout_weight="1"
                    android:background="#393939"
                    android:padding="4dp">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/repo_label"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autoLink="web"
                        android:text="@string/repo_url"
                        android:textColorLink="@color/colorLink" />
                </TableRow>


            </TableLayout>
        </ScrollView>

    </LinearLayout>


</FrameLayout>